src/v8/CAPI_TSData.pas


end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_EmergAmps():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.EmergAmps;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_EmergAmps(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       pTSData.EmergAmps := Value;
       ConductorSetDefaults(ConductorProps.EmergAmps, pTSData);
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_Diameter():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FRadius * 2.0;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_Diameter(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FRadius := Value / 2.0;
          ConductorSetDefaults(ConductorProps.diam, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_Radius():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FRadius;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_Radius(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FRadius := Value;
          ConductorSetDefaults(ConductorProps.Radius, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_GMRac():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FGMR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_GMRac(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FGMR60 := Value;
          ConductorSetDefaults(ConductorProps.GMRac, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_Rac():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_Rac(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FR60 := Value;
          ConductorSetDefaults(ConductorProps.Rac, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_Rdc():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FRDC;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_Rdc(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FRDC := Value;
          ConductorSetDefaults(ConductorProps.Rdc, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_GMRUnits():Integer;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FGMRUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_GMRUnits(Value: Integer);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FGMRUnits := Value;
          ConductorSetDefaults(ConductorProps.GMRunits, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_RadiusUnits():Integer;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FRadiusUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_RadiusUnits(Value: Integer);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FRadiusUnits := Value;
          ConductorSetDefaults(ConductorProps.radunits, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_ResistanceUnits():Integer;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FResistanceUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_ResistanceUnits(Value: Integer);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FResistanceUnits := Value;
          ConductorSetDefaults(ConductorProps.Runits, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_EpsR():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FEpsR;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_EpsR(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FEpsR := Value;
          CableDataSetDefaults(CableDataProps.EpsR, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_InsLayer():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FInsLayer;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_InsLayer(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FInsLayer := Value;
          CableDataSetDefaults(CableDataProps.InsLayer, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_DiaIns():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FDiaIns;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_DiaIns(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FDiaIns := Value;
          CableDataSetDefaults(CableDataProps.DiaIns, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_DiaCable():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FDiaCable;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_DiaCable(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FDiaCable := Value;
          CableDataSetDefaults(CableDataProps.DiaCable, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_DiaShield():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FDiaShield;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_DiaShield(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FDiaShield:= Value;
          TSDataSetDefaults(TSDataProps.DiaShield, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_TapeLayer():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FTapeLayer;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_TapeLayer(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       with pTSData do 
       begin
          FTapeLayer:= Value;
          TSDataSetDefaults(TSDataProps.TapeLayer, pTSData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION TSData_Get_TapeLap():Double;cdecl;
Var
   pTSData:TTSDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
       Result := pTSData.FTapeLap;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE TSData_Set_TapeLap(Value: Double);cdecl;
Var
   pTSData:TTSDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pTSData := TSDataClass[ActiveActor].GetActiveObj;
